# python-garminconnect

./: .gitignore  README.md  example.py  pyproject.toml  requirements.txt
api/: __init__.py  auth.py  main.py
